De-gender and clarify some text in my codebase

--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th th:text="#{wisdom.wisdomContent}">Wisdom</th>
-                <th th:text="#{wisdom.attribution}">Wise Man</th>
+                <th th:text="#{wisdom.attribution}">Wise Person</th>
                 <th th:text="#{wisdom.addedBy}">Submitted By</th>
                 <th th:text="#{wisdom.addedDate}">Submitted On</th>
             </tr>
