--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -17,13 +17,12 @@
             </tr>
         </thead>
         <tbody>
-            <div th:each="wisdom : ${allWisdoms}">
-                <tr><td th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways before crossing a one-way street.</td>
-                <td th:text="${wisdom.attribution}">Doug Linder</td>
-                <td th:text="${wisdom.addedByUsername}">intellijames</td>
-                <td th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</td>
-                </tr>
-        <tr th:unless="${#lists.isEmpty(wisdom.votes)}">
+                <tr th:each="wisdom : ${allWisdoms}">
+                    <td th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways before crossing a one-way street.</td>
+                    <td th:text="${wisdom.attribution}">Doug Linder</td>
+                    <td th:text="${wisdom.addedByUsername}">intellijames</td>
+                    <td th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</td>
+        <td th:unless="${#lists.isEmpty(wisdom.votes)}">
             <table>
             <thead>
                 <tr>
@@ -38,8 +37,8 @@
                 </tr>
                 </tbody>
             </table>
-        </tr>
-            </div>
+        </td>
+                </tr>
         </tbody>
     </table>
 </div>
