--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -2,47 +2,63 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Wisdom Leaderboard</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
-    <h1 th:text="#{title.leaderboard}">Wisdom Leaderboard</h1>
-    <table>
-        <thead>
-            <tr>
-                <th th:text="#{wisdom.wisdomContent}">Wisdom</th>
-                <th th:text="#{wisdom.attribution}">Wise Person</th>
-                <th th:text="#{wisdom.addedBy}">Submitted By</th>
-                <th th:text="#{wisdom.addedDate}">Submitted On</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="wisdom : ${allWisdoms}">
-                    <td th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways before crossing a one-way street.</td>
-                    <td th:text="${wisdom.attribution}">Doug Linder</td>
-                    <td th:text="${wisdom.addedByUsername}">intellijames</td>
-                    <td th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</td>
-        <td th:unless="${#lists.isEmpty(wisdom.votes)}">
-            <table>
-            <thead>
-                <tr>
-                    <th th:text="#{vote.addedByUsername}">Voted Up By</th>
-                    <th th:text="#{vote.timeAdded}"></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="vote : ${wisdom.votes}">
-                    <td th:text="${vote.addedByUsername}"></td>
-                    <td th:text="${vote.timeAdded}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </td>
-                </tr>
-        </tbody>
-    </table>
+<div class="container">
+    <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
+        <h1 th:text="#{title.leaderboard}">Wisdom Leaderboard</h1>
+        <div class="row">
+            <div class="col s5" th:text="#{wisdom.wisdomContent}">Wisdom</div>
+            <div class="col s2" th:text="#{wisdom.attribution}">Wise Person</div>
+            <div class="col s2" th:text="#{wisdom.addedBy}">Submitted By</div>
+            <div class="col s2 hide" th:text="#{wisdom.addedDate}">Submitted On</div>
+            <div class="col s3">Votes</div>
+        </div>
+        <div class="row" th:each="wisdom : ${allWisdoms}">
+            <div class="col s5" th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways
+                before crossing a
+                one-way street.
+            </div>
+            <div class="col s2" th:text="${wisdom.attribution}">Doug Linder</div>
+            <div class="col s2" th:text="${wisdom.addedByUsername}">intellijames</div>
+            <div class="col s2 hide" th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
+            <div class="col s3">
+                <div class="votesContainer" th:unless="${#lists.isEmpty(wisdom.votes)}">
+                    <ul class="collapsible">
+                        <li>
+                            <div class="collapsible-header"><span th:text="${#lists.size(wisdom.votes)}">0</span><i class="material-icons">arrow_downward</i></div>
+                            <div class="collapsible-body">
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th th:text="#{vote.addedByUsername}">Voted Up By</th>
+                                        <th th:text="#{vote.timeAdded}"></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="vote : ${wisdom.votes}">
+                                        <td th:text="${vote.addedByUsername}"></td>
+                                        <td th:text="${vote.timeAdded}"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
+        type="text/javascript"></script>
+<script type="text/javascript">  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.collapsible');
+    var instances = M.Collapsible.init(elems);
+  });
+</script>
 </body>
 </html>
