Move static js and css resources to a place Spring will serve them.  Accordingly, change wisdomleaderboard's import from static to referential now that references work.

--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -55,10 +55,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
         type="text/javascript"></script>
-<script type="text/javascript">  document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.collapsible');
-    var instances = M.Collapsible.init(elems);
-  });
-</script>
+<script src="/scripts/collapsible-init.js" type="text/javascript"></script>
 </body>
 </html>
