Add default msg to wisdomleaderboard in case of no wisdoms.  Also make names of wisdom submitters link to their user pages.  Also make # of votes show up on card.

--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="container">
+    <h1 th:text="#{title.leaderboard}">Wisdom Leaderboard</h1>
     <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
-        <h1 th:text="#{title.leaderboard}">Wisdom Leaderboard</h1>
         <div class="row" th:each="wisdom : ${allWisdoms}">
             <div class="col s12">
                 <div class="card green darken-4">
@@ -21,9 +21,12 @@
                         <div th:text="${wisdom.attribution}">Doug Linder</div>
                     </div>
                     <div class="card-action">
-                        <div th:text="${wisdom.addedByUsername}">intellijames</div>
+                        <a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a>
                         <div th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
+                        <div th:unless="${#lists.isEmpty(wisdom.votes)}" th:text="${#lists.size(wisdom.votes)}">-1</div>
+                        <div th:if="${#lists.isEmpty(wisdom.votes)}">Zero votes!</div>
                     </div>
+                    <!--<a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>-->
                 </div>
             </div>
             <!--<div class="col s3">
@@ -54,6 +57,7 @@
             </div>-->
         </div>
     </div>
+    <div class="wisdomlist" th:if="${#lists.isEmpty(allWisdoms)}">No wisdoms to rank by vote!</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
         type="text/javascript"></script>
