--- a/src/main/resources/templates/addwisdom.html
+++ b/src/main/resources/templates/addwisdom.html
@@ -2,17 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Add a Wisdom</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 <h1>Add a Wisdom</h1>
-<form action="#" th:action="@{/addwisdom}" th:object="${wisdomToAdd}" method="post">
-    <p>Wisdom: <input type="text" th:field="*{wisdomContent}"/></p>
-    <p>Attribution: <input type="text" th:field="*{attribution}"/></p>
-    <p>Your username: <input type="text" th:field="*{addedByUsername}"/></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-</form>
+<div class="container">
+    <form action="#" th:action="@{/addwisdom}" th:object="${wisdomToAdd}" method="post">
+        <p>Wisdom: <input type="text" th:field="*{wisdomContent}" placeholder="e.g. 'Measure twice, cut once.'"/></p>
+        <p>Attribution: <input type="text" th:field="*{attribution}" placeholder="e.g. 'My old man'"/></p>
+        <p>Your username: <input type="text" th:field="*{addedByUsername}" placeholder="e.g. 'rkennel'; leave blank for anon"/></p>
+        <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+    </form>
+</div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
+        type="text/javascript"></script>
 </body>
 </html>
