--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -24,7 +24,7 @@
                         <a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a>
                         <div th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
                         <div th:unless="${#lists.isEmpty(wisdom.votes)}" th:text="${#lists.size(wisdom.votes)}">-1</div>
-                        <div th:if="${#lists.isEmpty(wisdom.votes)}">Zero votes!</div>
+                        <div th:if="${#lists.isEmpty(wisdom.votes)}">0!</div>
                     </div>
                     <!--<a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>-->
                 </div>
