--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -23,42 +23,34 @@
                     <div class="card-action">
                         <a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a>
                         <div th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
-                        <div th:unless="${#lists.isEmpty(wisdom.votes)}" th:text="${#lists.size(wisdom.votes)}">-1</div>
-                        <div th:if="${#lists.isEmpty(wisdom.votes)}">0!</div>
-                    </div>
-                    <div class="collapsible header">
-                        <a class="btn-floating btn-large waves-effect waves-light red collapsible-header"><i class="material-icons">add</i></a>
-                    </div>
-                    <div class="vote_form_div collapsible-body">
+                        <div th:unless="${#lists.isEmpty(wisdom.votes)}"
+                             th:text="${#lists.size(wisdom.votes)} + ' votes'">-1 votes</div>
+                        <div th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</div>
+                        <ul class="collapsible">
+                            <li>
+                                <div class="collapsible-header">
+                                    <p>Click here to vote for this wisdom!</p>
+                                </div>
+                                <div class="collapsible-body">
+                                    <form method="POST" th:action="@{/addvote}">
+                                        <p><input type="hidden" name="wisdomContent" th:value="${wisdom.wisdomContent}">
+                                        </p>
+                                        <p><input type="hidden" name="wisdomAttribution"
+                                                  th:value="${wisdom.attribution}"></p>
+
+                                        <input type="text" name="voterUsername"
+                                               th:placeholder="#{placeholder.username}"/>
+                                        <button type="submit"
+                                                class="btn-floating btn-large waves-effect waves-light red collapsible-header">
+                                            <i class="material-icons">add</i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <!--<div class="col s3">
-                <div class="votesContainer" th:unless="${#lists.isEmpty(wisdom.votes)}">
-                    <ul class="collapsible">
-                        <li>
-                            <div class="collapsible-header"><span th:text="${#lists.size(wisdom.votes)}">0</span><i
-                                    class="material-icons">arrow_downward</i></div>
-                            <div class="collapsible-body">
-                                <table>
-                                    <thead>
-                                    <tr>
-                                        <th th:text="#{vote.addedByUsername}">Voted Up By</th>
-                                        <th th:text="#{vote.timeAdded}"></th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr th:each="vote : ${wisdom.votes}">
-                                        <td th:text="${vote.addedByUsername}"></td>
-                                        <td th:text="${vote.timeAdded}"></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>-->
         </div>
     </div>
     <div class="wisdomlist" th:if="${#lists.isEmpty(allWisdoms)}">No wisdoms to rank by vote!</div>
