--- a/src/main/resources/templates/addwisdomresult.html
+++ b/src/main/resources/templates/addwisdomresult.html
@@ -5,6 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <a href="/wisdomparade" class="brand-logo">UPWISE</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/addwisdom">Submit</a></li>
+                <li><a href="/wisdomleaderboard">Leaderboard</a></li>
+                <li><a href="/wisdomparade">All</a></li>
+                <li><a href="/wisdomsearch">Search</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <h1>Add a Wisdom - Result</h1>
 <div th:switch="${statusCode}">
     <h2 th:case="201">Your wisdom was added successfully!</h2>
