--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -8,19 +8,7 @@
 </head>
 <body>
 
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/wisdomparade" class="brand-logo">UPWISE</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/addwisdom">Submit</a></li>
-                <li><a href="/wisdomleaderboard">Leaderboard</a></li>
-                <li><a href="/wisdomparade">All</a></li>
-                <li><a href="/wisdomsearch">Search</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="container">
     <h1 th:text="#{title.leaderboard}">Wisdom Leaderboard</h1>
@@ -74,4 +62,5 @@
         type="text/javascript"></script>
 <script src="/scripts/collapsible-init.js" type="text/javascript"></script>
 </body>
+<footer th:replace="fragments/footer :: footer"></footer>
 </html>
