--- a/src/main/resources/templates/wisdomsearch.html
+++ b/src/main/resources/templates/wisdomsearch.html
@@ -8,22 +8,11 @@
 </head>
 <body>
 
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/wisdomparade" class="brand-logo">UPWISE</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/addwisdom">Submit</a></li>
-                <li><a href="/wisdomleaderboard">Leaderboard</a></li>
-                <li><a href="/wisdomparade">All</a></li>
-                <li><a href="/wisdomsearch">Search</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <h2>Sorry, searching is a work in progress!</h2>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
         type="text/javascript"></script>
 </body>
+<footer th:replace="fragments/footer :: footer"></footer>
 </html>
