Abstract the head and CSS imports into a fragment whose sole parameter is page title.

--- a/src/main/resources/templates/addwisdom.html
+++ b/src/main/resources/templates/addwisdom.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Add a Wisdom</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
+<head th:replace="fragments/head :: head(pageTitle='Add Wisdom')"></head>
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
