--- a/src/main/resources/templates/wisdomparade.html
+++ b/src/main/resources/templates/wisdomparade.html
@@ -1,11 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Wisdom Parade</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+<head th:replace="fragments/head :: head(pageTitle='Wisdom Parade')"></head>
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
