--- a/src/main/resources/templates/addvoteresult.html
+++ b/src/main/resources/templates/addvoteresult.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Add a Vote - Result</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+<head th:replace="fragments/head :: head(pageTitle='Add Vote Result')"></head>
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 <h1>Add a Vote - Result</h1>
