--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title th:text="#{title.userDashboardTitle}">User Dashboard</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+<head th:replace="fragments/head :: head(pageTitle='User Dashboard')"></head>
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
