--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -5,7 +5,7 @@
 
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<h1 th:text="#{title.userDashboardTitle}">User Dashboard</h1>
+</main>
 <div class="wisdomsSubmittedList" th:unless="${#lists.isEmpty(allWisdomsSubmitted)}">
     <h2 th:text="#{title.userDashboard.submitted}">Wisdoms Submitted</h2>
     <table>
@@ -46,8 +46,8 @@
         </tbody>
     </table>
 </div>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js" type="text/javascript"></script>
+</main>
+<a th:replace="fragments/footer :: scriptimports"></a>
 </body>
 <footer th:replace="fragments/footer :: footer"></footer>
 </html>
