--- a/src/main/resources/templates/wisdomparade.html
+++ b/src/main/resources/templates/wisdomparade.html
@@ -4,16 +4,15 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-
+<main>
 <div class="carousel carousel-slider center" th:unless="${#lists.isEmpty(allWisdoms)}">
     <div th:each="wisdom : ${allWisdoms}" class="carousel-item blue white-text">
         <h2 th:text="${wisdom.wisdomContent}">Wisdom Content</h2>
         <p class="white-text" th:text="${wisdom.attribution}">Wise Person</p>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
-        type="text/javascript"></script>
-<script src="/scripts/carousel_autoadvance-init.js" type="text/javascript"></script>
+</main>
+<a th:replace="fragments/footer :: scriptimports"></a>
 </body>
 <footer th:replace="fragments/footer :: footer"></footer>
 </html>
