--- a/src/main/resources/templates/wisdomsearch.html
+++ b/src/main/resources/templates/wisdomsearch.html
@@ -4,10 +4,10 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-
+<main>
 <h2>Sorry, searching is a work in progress!</h2>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
-        type="text/javascript"></script>
+</main>
+<a th:replace="fragments/footer :: scriptimports"></a>
 </body>
 <footer th:replace="fragments/footer :: footer"></footer>
 </html>
