Add default divs for the case that a user doesn't have submissions or votes, linking to where to create them.

--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -25,6 +25,9 @@
         </tbody>
     </table>
 </div>
+<div class="wisdomsSubmittedList" th:if="${#lists.isEmpty(allWisdomsSubmitted)}">
+    <p>You haven't submitted any wisdom yet.  Do so <a href="/addwisdom">here</a>.</p>
+</div>
 <div class="wisdomsVotedForList" th:unless="${#lists.isEmpty(allWisdomsVotedFor)}">
     <h2 th:text="#{title.userDashboard.votedFor}">Wisdoms Voted For</h2>
     <table>
@@ -45,6 +48,10 @@
         </tr>
         </tbody>
     </table>
+</div>
+
+<div class="wisdomsVotedForList" th:if="${#lists.isEmpty(allWisdomsVotedFor)}">
+    <p>You haven't voted for any wisdoms yet.  Find one you might like <a href="/wisdomleaderboard">here</a>.</p>
 </div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
