--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,6 +13,7 @@
                 <li><a href="/addwisdom">Submit</a></li>
                 <li><a href="/wisdomleaderboard">Leaderboard</a></li>
                 <li><a href="/wisdomparade">All</a></li>
+                <li><a href="/randomwisdom">Random</a></li>
                 <li><a href="/wisdomsearch">Search</a></li>
             </ul>
         </div>
