--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,18 +6,20 @@
 </head>
 <body>
 <div class="navbar-fixed" th:fragment="navbar">
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/wisdomparade" class="brand-logo">UPWISE</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/addwisdom">Submit</a></li>
-                <li><a href="/wisdomleaderboard">Leaderboard</a></li>
-                <li><a href="/wisdomparade">All</a></li>
-                <li><a href="/randomwisdom">Random</a></li>
-                <li><a href="/wisdomsearch">Search</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="/wisdomparade" class="brand-logo">UPWISE</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="/addwisdom">Submit</a></li>
+                    <li><a href="/wisdomleaderboard">Leaderboard</a></li>
+                    <li><a href="/wisdomparade">All</a></li>
+                    <li><a href="/randomwisdom">Random</a></li>
+                    <li><a href="/wisdomsearch">Search</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </div>
 </body>
 </html>
