--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -10,8 +10,8 @@
     <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
         <div class="row" th:each="wisdom : ${allWisdoms}">
             <div class="col s12">
-                <div class="card green darken-4">
-                    <div class="card-content white-text">
+                <div class="card">
+                    <div class="card-content">
                         <span class="card-title" th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways
                             before crossing a
                             one-way street.
