Added the ability to ask the Wisdom Service (efficiently) whether it has any wisdoms.  Fixed a problem where the 'random wisdom' page would blow up if there were none and you tried to use it anyway.

--- a/src/main/resources/templates/viewwisdom.html
+++ b/src/main/resources/templates/viewwisdom.html
@@ -5,7 +5,7 @@
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
-    <div class="vert-container">
+    <div class="vert-container" th:unless="${wisdom} == null">
         <div class="container">
             <div class="row">
                 <div class="col s12">
@@ -28,6 +28,8 @@
         </div>
         <p th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</p>
     </div>
+
+    <div th:if="${wisdom} == null"><p>Cannot show a wisdom - no wisdoms have been added!</p></div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 </body>
