Clicking brand logo now redirects to /wisdomleaderboard rather than /wisdomparade

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="/wisdomparade" class="brand-logo">UPWISE</a>
+                <a href="/wisdomleaderboard" class="brand-logo">UPWISE</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="/addwisdom">Submit</a></li>
                     <li><a href="/wisdomleaderboard">Leaderboard</a></li>
