--- a/src/main/resources/templates/addwisdom.html
+++ b/src/main/resources/templates/addwisdom.html
@@ -7,13 +7,6 @@
 
 <main>
 <div class="container">
-
-    <div th:if="${statusCode}" th:switch="${statusCode}">
-        <h2 th:case="201">Your wisdom was added successfully!</h2>
-        <h2 th:case="400">That's not a valid wisdom!</h2>
-        <h2 th:case="409">That wisdom exists already and was not added.</h2>
-    </div>
-
     <form action="#" th:action="@{/addwisdom}" th:object="${wisdomToAdd}" method="post">
         <p>Wisdom: <input type="text" th:field="*{wisdomContent}" th:placeholder="#{placeholder.wisdomContent}"/></p>
         <p>Attribution: <input type="text" th:field="*{attribution}" th:placeholder="#{placeholder.wisdomAttribution}"/></p>
@@ -23,6 +16,11 @@
 </div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
+<div th:if="${statusCode}" th:switch="${statusCode}">
+    <script th:case="201">M.toast({html: "Your wisdom was added!"})</script>
+    <script th:case="400">M.toast({html: "That's not a valid wisdom!"})</script>
+    <script th:case="409">M.toast({html: "That wisdom already exists!"})</script>
+</div>
 </body>
 <footer th:replace="fragments/footer :: footer"></footer>
 </html>
