Correct issue with duplicate colors in css.

--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -2,7 +2,7 @@ html{
     --color-bg1: #eff9a6;
     --color-bg2: #5F8B67;
     --color-1: #300138;
-    --color-2: #300138;
+    --color-2: #cc76a1;
     /*Joker colors*/
 
    /* --color-bg1: #502419;
