--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,9 +13,9 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="/addwisdom">Submit</a></li>
                     <li><a href="/wisdomleaderboard">Leaderboard</a></li>
-                    <li><a href="/wisdomparade">All</a></li>
                     <li><a href="/randomwisdom">Random</a></li>
                     <li><a href="/wisdomsearch">Search</a></li>
+                    <li><a sec:authorize="isAuthenticated()" href="/logout">Log Out</a></li>
                 </ul>
             </div>
         </nav>
