--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -69,6 +69,11 @@ h3, h4, h5, h6{
     margin-right: 10px;
 }
 
+.vote-button-label {
+    color: var(--color-1);
+    background-color: var(--color-bg2)
+}
+
 .cinzel {
     font-family: 'Cinzel', serif;
 }
