--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,6 +16,8 @@
                     <li><a href="/randomwisdom">Random</a></li>
                     <li><a href="/wisdomsearch">Search</a></li>
                     <li><a sec:authorize="isAuthenticated()" href="/logout">Log Out</a></li>
+                    <li><a sec:authorize="isAnonymous()" href="/login">Log In</a></li>
+                    <li><a sec:authorize="isAnonymous()" href="/register">Register</a></li>
                 </ul>
             </div>
         </nav>
